# python-enigma

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  setup.py
python_enigma/: CHANGELOG.md  __init__.py  __main__.py  catalogue.json  csvtojson.py  enigma.py  helloworld.py  py.typed  table_rotors.csv  types.py
python_enigma/docs/Examples/: helloworld.py
python_enigma/resources/: __init__.py  catalogue.json  csvtojson.py
tests/: test_cryption.py
