[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="python_enigma"
dynamic=["version"]
requires-python = ">= 3.6"
authors= [
    {name="Zachary Adam-MacEwen"},
    ]
maintainers = [
    {name="Jeffrey P Goldberg", email="jeffrey@goldmark.org"},
    ]
description="A package which adds Enigma Machine-emulating functionality"
readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Intended Audience :: Education",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",

  "Topic :: Security :: Cryptography",
  "Topic :: Sociology :: History",

  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ZAdamMac/python-enigma/"
Changelog = "https://github.com/ZAdamMac/python-enigma/blob/master/CHANGELOG.md"
Repository = "https://github.com/ZAdamMac/python-enigma.git"

[tool.hatch.version]
path = "python_enigma/__init__.py"


